--- a/estilo/style.css
+++ b/estilo/style.css
@@ -34,3 +34,29 @@
         width: 311px;
         background: url('../imagens/frame-iphone.png')no-repeat;
     }
+
+    iframe#tela{
+        position: relative;
+        top: 80px;
+        left: 22px;
+        width: 269px;
+        height: 471px;
+    }
+
+    section#soc{
+        text-align: right;
+    }
+
+    section#soc img{
+        width: 50px;
+        margin: 10px;
+        border-radius: 50%;
+        box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.582);
+        box-sizing: border-box;
+    }
+
+    section#soc img:hover{
+        border: 2px solid rgba(255, 255, 255, 0.699);
+        transform: translate(-3px, -3px);
+        box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.61);
+    }
